# UserverEasyTemplate

./: .gitignore  AppDeps.hpp  CMakeLists.txt  main.cpp  pch.hpp
Components/OAuth/: OAuthComponent.cpp  OAuthComponent.hpp
Components/OAuth/Github/: OAuthGithubComponent.hpp
Components/SMTP/: SMTPClientComponent.cpp  SMTPClientComponent.hpp
Dependencies/HttpClientCoreDep/: HttpClientCoreDep.cpp  HttpClientCoreDep.hpp
Dependencies/HttpClientDep/: HttpClientDep.cpp  HttpClientDep.hpp
Dependencies/HttpClientMiddlewarePipelineDep/: HttpClientMiddlewarePipelineDep.cpp  HttpClientMiddlewarePipelineDep.hpp
Dependencies/MySQLDep/: MySQLDep.cpp  MySQLDep.hpp
Dependencies/OAuthDep/: OAuthDep.cpp  OAuthDep.hpp
Dependencies/OAuthGithubDep/: OAuthGithubDep.cpp  OAuthGithubDep.hpp
Dependencies/SMTPDep/: SMTPDep.cpp  SMTPDep.hpp
